# neuralhub

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  INSTALL_MINICLAUDE.md  PROJECT_OVERVIEW.md  README.md  docker-compose.yml
backend/: gunicorn_conf.py  pyproject.toml  requirements.txt  sub_worker.py
backend/adapters/: __init__.py  anthropic_adapter.py  anthropic_stream.py  anthropic_support.py  http_error_support.py  logging_support.py  message_zones.py  model_discovery.py  ollama_adapter.py  openai_adapter.py  openai_streaming.py  openai_support.py  openai_usage.py  provider_manager.py  role_router.py
backend/api/: app.py  feishu_startup.py  frontend.py  lifespan_support.py  morning_report_startup.py  task_queue_consumer.py  task_queue_consumer_helpers.py  x_monitor_runner.py  x_search_service.py
backend/cli_support/: __init__.py  console.py  console_helpers.py  display.py  plan_commands.py  plan_display.py  plan_display_support.py  plan_tool_approval.py  session.py
backend/common/: feishu_card_formatter.py  feishu_card_formatter_support.py  feishu_signature.py  metrics.py  x_budget.py
backend/config/: __init__.py  feishu_cards.json  redis_client.py  scheduled_tasks.json  settings.py
backend/core/: pubsub.py  system_prompt.py  task_queue.py  task_queue_agent_runner.py  task_queue_cancel.py  task_queue_consumer.py  task_queue_consumer_helpers.py  task_queue_persistence.py  task_queue_recover_support.py  task_queue_support.py
backend/schemas/: feishu.py  provider.py
backend/storage/: __init__.py  asset_store.py  database.py  memory_store.py  (+11 more)
(+495 files in other folders)
