[project]
name = "agent-studio"
version = "0.1.0"
requires-python = ">=3.12"
description = "Self-hosted AI coding agent platform"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=22.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "playwright>=1.45.0",
    "trafilatura>=1.12.0",
    "feedparser>=6.0.11",
    "pyyaml>=6.0.2",
    "pycryptodome>=3.20.0",
    "redis>=5.0.0",
    "hiredis>=3.0.0",
    "websockets>=13.0",
    "structlog>=24.0.0",
    "asyncpg>=0.29.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "python-dotenv>=1.0.0",
    "mcp>=1.0.0",
]

[project.scripts]
miniclaude = "backend.cli:cli_entry"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
